force-app/main/default/objects/Approval_Step__c/Approval_Step__c.object-meta.xml
<CustomObject>
    <label>Approval Step</label>
    <nameField>
        <label>Approval Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>