force-app/main/default/objects/Approval_Step__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Approval Steps</relationshipLabel>
    <relationshipName>Approval_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>