force-app/main/default/objects/Approval_Step__c/fields/Step_Description__c.field-meta.xml
<CustomField>
    <fullName>Step_Description__c</fullName>
    <label>Step_Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>