force-app/main/default/objects/Approval_Step__c/fields/Visible_on_Portal__c.field-meta.xml
<CustomField>
    <fullName>Visible_on_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible on Portal</label>
    <type>Checkbox</type>
</CustomField>